--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/bio.html">bio</a></td>
-		<td class="summary">openssl.bio module.</td>
+		<td class="summary">Provide bio module.</td>
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/cipher.html">cipher</a></td>
@@ -98,7 +98,7 @@
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/pkey.html">pkey</a></td>
-		<td class="summary">Public/Private key module.</td>
+		<td class="summary">Provide Public/Private key module.</td>
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/sk.html">sk</a></td>
@@ -110,11 +110,11 @@
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/ts.html">ts</a></td>
-		<td class="summary">timestamp module.</td>
+		<td class="summary">Provide timestamp module.</td>
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/x509.html">x509</a></td>
-		<td class="summary">x509 module.</td>
+		<td class="summary">Provide x509 module.</td>
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/x509.attr.html">x509.attr</a></td>
@@ -122,7 +122,7 @@
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/crl.html">crl</a></td>
-		<td class="summary">crl module.</td>
+		<td class="summary">Provide crl module.</td>
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/x509.extension.html">x509.extension</a></td>
@@ -134,7 +134,7 @@
 	</tr>
 	<tr>
 		<td class="name"  nowrap><a href="modules/csr.html">csr</a></td>
-		<td class="summary">csr module.</td>
+		<td class="summary">Provide csr module.</td>
 	</tr>
 </table>
 
