--- a/modules/crl.html
+++ b/modules/crl.html
@@ -65,7 +65,7 @@
 <div id="content">
 
 <h1>Module <code>crl</code></h1>
-<p>crl module.</p>
+<p>Provide crl module.</p>
 <p>
  create and manage x509 certificate sign request</p>
     <h3>Usage:</h3>
