--- a/modules/ts.html
+++ b/modules/ts.html
@@ -68,7 +68,7 @@
 <div id="content">
 
 <h1>Module <code>ts</code></h1>
-<p>timestamp module.</p>
+<p>Provide timestamp module.</p>
 <p>
  create and manage x509 certificate sign request</p>
     <h3>Usage:</h3>
