--- a/modules/x509.html
+++ b/modules/x509.html
@@ -65,7 +65,7 @@
 <div id="content">
 
 <h1>Module <code>x509</code></h1>
-<p>x509 module.</p>
+<p>Provide x509 module.</p>
 <p>
  create and manage x509 certificate</p>
     <h3>Usage:</h3>
