--- a/modules/csr.html
+++ b/modules/csr.html
@@ -65,7 +65,7 @@
 <div id="content">
 
 <h1>Module <code>csr</code></h1>
-<p>csr module.</p>
+<p>Provide csr module.</p>
 <p>
  create and manage x509 certificate sign request</p>
     <h3>Usage:</h3>
